[package]
name = "nibi"
version = "0.2.3"
authors = ["suquiya <22910980+suquiya@users.noreply.github.com>"]
edition = "2024"
description = "Nibi is a static site generator. (WIP, implementing)"
license = "BSD-3-Clause"
repository = "https://github.com/suquiya/nibi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cliclack = "0.3.6"
combu = { version = "1.5.1", features = ["vector_serde"] }
exrs = { version = "1.2.0", features = ["cmd"] }
hcl-rs = "0.19.2"
jiff = "0.2.15"
minijinja = "2.11.0"
pulldown-cmark = "0.13.0"
quick-xml = { version = "0.38.1", features = ["serialize"] }
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
strum = { version = "0.27.2", features = ["derive"] }
toml = "0.9.5"
walkdir = "2.5.0"
