[package]
name = "nibi"
version = "0.2.5"
authors = ["suquiya <22910980+suquiya@users.noreply.github.com>"]
edition = "2024"
description = "Nibi is a static site generator. (WIP, implementing)"
license = "BSD-3-Clause"
repository = "https://github.com/suquiya/nibi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cliclack = "0.3.7"
combu = { version = "1.6.0", features = ["vector_serde"] }
exrs = { version = "1.2.0", features = ["cmd"] }
hcl-rs = "0.19.4"
jiff = "0.2.17"
minijinja = "2.14.0"
pulldown-cmark = "0.13.0"
quick-xml = { version = "0.38.4", features = ["serialize"] }
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
strum = { version = "0.27.2", features = ["derive"] }
toml = "0.9.10"
walkdir = "2.5.0"
