[package]
name = "nibi"
version = "0.2.5"
authors = ["suquiya <22910980+suquiya@users.noreply.github.com>"]
edition = "2024"
description = "Nibi is a static site generator. (WIP, implementing)"
license = "BSD-3-Clause"
repository = "https://github.com/suquiya/nibi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cliclack = "0.5.4"
combu = { version = "1.6.1", features = ["vector_serde"] }
exrs = { version = "1.2.0", features = ["cmd"] }
hcl-rs = "0.19.7"
jiff = "0.2.23"
minijinja = "2.19.0"
pulldown-cmark = "0.13.3"
quick-xml = { version = "0.39.2", features = ["serialize"] }
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
toml = "1.1.2"
walkdir = "2.5.0"

[lints.clippy]
doc_markdown = "warn"
